--- a/Styles.css
+++ b/Styles.css
@@ -3,10 +3,10 @@
 html {
     font-family: 'Lilita One', cursive;
     /*font-family: 'Roboto Condensed', sans-serif;*/
-}
 
-:root {
-    font-size: 0.75em;
+}
+@media screen and (max-width: 1024px){
+
 }
 
 body{
@@ -58,18 +58,12 @@ img{
 }
 .container {
     height: 70px;
-    /*background: #64909b;*/
-    /*width: 900px;*/
-    /*margin: 0 auto;*/
     border-bottom: 1px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-    /*display: flex;*/
-    /*flex-direction: row;*/
-
-}
-
-.navBar a, .navBar img{
     vertical-align: middle;
+    justify-content: center;
+    /*margin-right: 10em;*/
+    /*margin-left: 10em;*/
 }
 
 .navBar{
@@ -78,6 +72,7 @@ img{
     flex-direction: row;
 }
 .navBar a{
+    color: dimgray;
     margin-top: 10px;
     padding: 15px;
     text-decoration: none;
@@ -90,39 +85,43 @@ img{
     flex-grow: 1;
 }
 
-.block{
+div.block{
     align-items: flex-end;
     padding-right: 1em;
+    display: flex;
+    flex-direction: row;
 }
 
 #logo{
     color: black;
-    font-size:50px;
+    font-size:3em;
     font-weight: bolder;
     /*margin: auto;*/
 
 }
 .icon{
     margin: 10px;
-    padding: auto;
+    padding: 10px;
 }
-.bootom_W{
-    border:1px solid dimgray;
-    border-radius: 2px;
+form{
+    display: flex;
+    flex-direction: row;
 }
-.bootom_Z{
+input {
     background-color: #62a4c6;
-    border:1px solid dimgray;
+    color: #F2F2F2;
+    border:1px solid #62a4c6;
     border-radius: 2px;
+    height: 2em;
 }
-#check{
-    color: aliceblue;
-    margin-left: 40px;
-    margin-top: 35px;
+#come input{
+    color: black;
+    background-color: white;
+    border:1px solid dimgray;
 }
 .more_content{
-    display: block;
-    margin: 0 auto;
+    /*display: block;*/
+    margin-top: 1em;
 }
 .crumbs {
     display:flex;
@@ -136,4 +135,19 @@ img{
     padding: 10px;
     color: dimgray;
     font-family:'Titillium Web', sans-serif;
+}
+.picture{
+    height: min-content;
+}
+.posts{
+    display:flex;
+    flex-direction:row;
+    margin: 10px;
+    padding: 10px;
+}
+.posts p{
+    margin: 10px;
+    padding: 10px;
+    font-family:'Titillium Web', sans-serif;
+    font-size:12px;
 }
