--- a/Styles.css
+++ b/Styles.css
@@ -13,19 +13,24 @@ body{
     margin:0;
     padding:0;
 }
-img{
+.navBar img{
     height: 15px;
 }
-.header{
-    height: 30px;
-    background:#F2F2F2;
+header {
+    height: 1.2em;
+    background: #F2F2F2;
     border-bottom: 1px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-
+    display: flex;
+    align-items: center;
 }
+
+
+
 .top{
     font-family: sans-serif;
     font-size: 14px;
+
 }
 .top ul {
     list-style: none;
@@ -144,7 +149,18 @@ input {
     flex-direction:row;
     margin: 10px;
     padding: 10px;
+    height: 2em;
+
+  }
+
+.posts img{
+    border-radius: 0.3em;
+    max-height: 2em;
+    max-width: 2vm;
+    overflow: hidden;
+
 }
+
 .posts p{
     margin: 10px;
     padding: 10px;
