--- a/Styles.css
+++ b/Styles.css
@@ -111,7 +111,7 @@ input {
     border:1px solid dimgray;
 }
 .more_content{
-    margin-left: 2em;
+    margin: 0 0 0 0;
 }
 .crumbs {
     display:flex;
@@ -122,13 +122,13 @@ input {
 
 .crumbs a{
     text-decoration: none;
-    margin: 10px;
-    padding: 10px;
+    margin: 10px 10px 10px 0;
+    padding: 10px 10px 10px 0;
     color: dimgray;
     font-family:'Titillium Web', sans-serif;}
 
 .picture{
-    height: min-content;
+    width: 100%;
 }
 .posts{
     display:flex;
@@ -146,30 +146,39 @@ input {
     margin: 0;
     padding: 10px;
     font-family:'Titillium Web', sans-serif;
-    font-size:12px;
+    font-size: 0.75em;
 }
 
 div.more_content{
-    width: 70%;
+    width: 100%;
     padding: 1em 1.5em;
     }
-p.text {
-    width: 70%;
+p.postContent {
+    width: 100%;
 }
 p.text_2 {
-    width: 70%;
+    width: 100%;
 }
+
+.addMargin{
+margin: 0 0.3em 0 0;
+}
+
+main{
+    width: 68%;
+}
+
 aside{
-    width: 30%;
+    width: 25%;
     padding: 1.5em;
     background-color: #ababab;
-    position: fixed;
-    right: 4em;
+    position: absolute;
+    right: 0.3em;
     top: 100px;
 }
 aside img{
     width: 20px;
-    margin: 1em;
+    margin: 0 1em 0 0;
     justify-content: center;
 
 }
