--- a/Styles.css
+++ b/Styles.css
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Lilita+One|Roboto+Condensed&display=swap');
-
 html {
-    font-family: 'Lilita One', cursive;
-    /*font-family: 'Roboto Condensed', sans-serif;*/}
+    font-family: sans-serif;}
 
 body{
     margin:0;
@@ -20,12 +17,8 @@ header {
     align-items: center;}
 
 .top{
-    font-family: sans-serif;
     font-size: 14px;
-
 }
-
-
 .top ul {
     list-style: none;
     display: flex;
@@ -72,7 +65,6 @@ header {
     margin-top: 10px;
     padding: 15px;
     text-decoration: none;
-    font-family:'Titillium Web', sans-serif;
     font-size: 14px;
 }
 .logotype{
@@ -110,6 +102,7 @@ input {
     background-color: white;
     border:1px solid dimgray;
 }
+
 .more_content{
     margin: 0 0 0 0;
 }
@@ -125,7 +118,8 @@ input {
     margin: 10px 10px 10px 0;
     padding: 10px 10px 10px 0;
     color: dimgray;
-    font-family:'Titillium Web', sans-serif;}
+    font-size: .9em;
+ }
 
 .picture{
     width: 100%;
@@ -141,11 +135,13 @@ input {
     width: 2em;
     object-fit: cover;
 }
-
+.posts_avatar_color{
+    color: #62a4c6;
+    font-weight: bolder;
+}
 .posts p{
     margin: 0;
     padding: 10px;
-    font-family:'Titillium Web', sans-serif;
     font-size: 0.75em;
 }
 
@@ -171,15 +167,18 @@ main{
 aside{
     width: 25%;
     padding: 1.5em;
-    background-color: #ababab;
+    background-color: #f7f7f7;
     position: absolute;
     right: 0.3em;
     top: 100px;
+
 }
+
 aside img{
     width: 20px;
-    margin: 0 1em 0 0;
-    justify-content: center;
+    margin: 0 1em 0 1em;
+    flex-direction: inherit;
+
 
 }
 aside h1{
@@ -189,6 +188,20 @@ aside h1{
 aside h2{
     font-size: 14px;
     padding-top: 1em;
-    border-top: 1px solid black;
+    border-top: 1px solid #ababab;
 }
+
+.sidebar p{
+     font-size: 13px;
+     color: #62a4c6;
+     font-weight: bolder;}
+
+div .pictogram{
+    align-items:center;
+    display: flex;
+    flex-direction: row;}
+
+
+
+
 
