--- a/Styles.css
+++ b/Styles.css
@@ -1,53 +1,67 @@
 html {
-    font-family: sans-serif;}
+    font-family: sans-serif;
+    font-size: 14px;
+}
 
-body{
-    margin:0;
-    padding:0;}
+body {
+    margin: 0;
+    padding: 0;
+}
 
-.navBar img{
-    height: 15px;}
+.navBar img {
+    height: 15px;
+}
 
 header {
-    height: 1.2em;
+    height: 1.2em; /* нельзя фиксировать высоту */
     background: #F2F2F2;
     border-bottom: 1px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     display: flex;
-    align-items: center;}
+    align-items: center;
+}
 
-.top{
+.top {
     font-size: 14px;
 }
+
 .top ul {
     list-style: none;
     display: flex;
     flex-direction: row;
-    margin: 0;}
+    margin: 0;
+}
 
-.top a{
+.top a {
     margin: 10px;
     padding: 10px;
-    text-decoration: none;}
+    text-decoration: none;
+}
 
-.first{
-    color:black;}
+.first {
+    color: black;
+}
 
-.else{
+.else {
     color: rgba(46, 179, 185, 0.93);
 }
-.left_G{
+
+.left_G { /* названия классов должны быть функциональными, то есть каждый класс должен иметь свое уникальное имя описывающее его функцию */
     color: dimgray;
 }
-.left_B{
-    color: blueviolet;
+
+.left_B {
+    color: blueviolet; /* лучше использовать хекс цвета */
 }
-.left_Z{
+
+.left_Z {
     color: #00ac00;
 }
-.left_A{
-    color:deepskyblue;
+
+.left_A {
+    color: deepskyblue;
 }
+
 .container {
     height: 70px;
     border-bottom: 1px solid #ccc;
@@ -55,116 +69,132 @@ header {
     vertical-align: middle;
     justify-content: center;
 }
-.navBar{
-    padding-left: 2em;
+
+.navBar {
+    padding-left: 2em; /* лучше использовать rem */
     display: flex;
     flex-direction: row;
 }
-.navBar a{
+
+.navBar a {
     color: dimgray;
     margin-top: 10px;
     padding: 15px;
     text-decoration: none;
     font-size: 14px;
 }
-.logotype{
-    align-items: stretch;
-    flex-grow: 1;}
 
-div.block{
+.logotype {
+    align-items: stretch;
+    flex-grow: 1;
+}
+
+div.block {
     align-items: flex-end;
     padding-right: 3em;
     display: flex;
-    flex-direction: row;}
+    flex-direction: row;
+}
 
-#logo{
+#logo {
     color: black;
-    font-size:3em;
+    font-size: 3em;
     font-weight: bolder;
 }
-.icon{
+
+.icon {
     margin: 10px;
     padding: 10px;
 }
-form{
+
+form {
     display: flex;
     flex-direction: row;
 }
+
 input {
     background-color: #62a4c6;
     color: #F2F2F2;
-    border:1px solid #62a4c6;
+    border: 1px solid #62a4c6;
     border-radius: 2px;
     height: 2em;
 }
-#come input{
+
+#come input {
     color: black;
     background-color: white;
-    border:1px solid dimgray;
+    border: 1px solid dimgray;
 }
 
-.more_content{
+.more_content {
     margin: 0 0 0 0;
 }
+
 .crumbs {
-    display:flex;
-    flex-direction:row;
-    list-style:none;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
     padding: 0;
 }
 
-.crumbs a{
+.crumbs a {
     text-decoration: none;
     margin: 10px 10px 10px 0;
     padding: 10px 10px 10px 0;
     color: dimgray;
     font-size: .9em;
- }
+}
 
-.picture{
+.picture {
     width: 100%;
 }
-.posts{
-    display:flex;
-    flex-direction:row;
-    height: 2em;}
 
-.posts img{
+.posts {
+    display: flex;
+    flex-direction: row;
+    height: 2em;
+}
+
+.posts img {
     border-radius: 0.3em;
     height: 2em;
     width: 2em;
     object-fit: cover;
 }
-.posts_avatar_color{
+
+.posts_avatar_color {
     color: #62a4c6;
     font-weight: bolder;
 }
-.posts p{
+
+.posts p {
     margin: 0;
     padding: 10px;
     font-size: 0.75em;
 }
 
-div.more_content{
+div.more_content {
     width: 100%;
     padding: 1em 1.5em;
-    }
+}
+
 p.postContent {
     width: 100%;
 }
+
 p.text_2 {
     width: 100%;
 }
 
-.addMargin{
-margin: 0 0.3em 0 0;
+.addMargin {
+    margin: 0 0.3em 0 0;
 }
 
-main{
+main {
     width: 68%;
 }
 
-aside{
+aside { /* нужно использовать класы */
     width: 25%;
     padding: 1.5em;
     background-color: #f7f7f7;
@@ -174,32 +204,38 @@ aside{
 
 }
 
-aside img{
+aside img {
     width: 20px;
     margin: 0 1em 0 1em;
     flex-direction: inherit;
 
 
 }
-aside h1{
+
+aside h1 {
     font-size: 16px;
-    text-transform:uppercase;
+    text-transform: uppercase;
 }
-aside h2{
+
+aside h2 {
     font-size: 14px;
     padding-top: 1em;
     border-top: 1px solid #ababab;
 }
 
-.sidebar p{
-     font-size: 13px;
-     color: #62a4c6;
-     font-weight: bolder;}
+.sidebar p {
+    font-size: 13px;
+    color: #62a4c6;
+    font-weight: bolder;
+}
 
-div .pictogram{
-    align-items:center;
+div .pictogram {
+    align-items: center;
     display: flex;
-    flex-direction: row;}
+    flex-direction: row;
+}
+
+/* каскадные стили не предпочтительны, лучше использовать методологию нейминга классов БЭМ */
 
 
 
