--- a/Styles.css
+++ b/Styles.css
@@ -47,7 +47,7 @@ header {
 }
 
 .left_G { /* названия классов должны быть функциональными, то есть каждый класс должен иметь свое уникальное имя описывающее его функцию */
-    color: dimgray;
+    color: #6c6c6c;
 }
 
 .left_B {
